--- a/style.css
+++ b/style.css
@@ -6,3 +6,17 @@
     height: 105px;
     object-fit: cover;
 }
+.navbar{
+    background: pink;
+    height: 80px;
+    width: 100%;
+    padding: 0 100px;
+    font-weight: bold;
+}
+.a{
+    float: right;
+    margin-right: 20px;
+}
+.body{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
