--- a/style.css
+++ b/style.css
@@ -1,22 +1,34 @@
-.header{
-    background: pink;
+*{
+padding: 0;
+margin: 0;
+text-decoration: none;
+list-style: none;
+box-sizing: border-box;
 }
 .logo{
     max-width: 150px;
-    height: 105px;
+    height: 100px;
     object-fit: cover;
+    margin-bottom: auto;
+    margin-left: 5px;
 }
-.navbar{
-    background: pink;
-    height: 80px;
+.nav{
+    background: rgb(248, 226, 229);
+    height: 100%;
     width: 100%;
-    padding: 0 100px;
-    font-weight: bold;
 }
-.a{
+.nav ul{
     float: right;
-    margin-right: 20px;
+    margin-right: 250px;
 }
-.body{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+.nav ul li{
+    display: inline-block;
+    line-height: 92px;
+    margin: 0 10px;
+    padding: 15px;
+}
+.nav ul li a{
+    color: rgb(218, 129, 218);
+    font-size: 17px;
+    text-transform: uppercase;
 }
