--- a/style.css
+++ b/style.css
@@ -1,44 +1,147 @@
+:root{
+    --pink: #e84393;
+}
+
 *{
-padding: 0;
-margin: 0;
-text-decoration: none;
-list-style: none;
-box-sizing: border-box;
+    margin: 0; padding: 0;
+    box-sizing: border-box;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    outline: none; border: none;
+    text-decoration: none;
+    text-transform: capitalize;
+    transition: .2s linear;
 }
-.logo{
-    max-width: 150px;
-    height: 100px;
-    object-fit: cover;
-    margin-bottom: auto;
-    margin-left: 5px;
+
+html{
+    font-size: 62.5%;
+    scroll-behavior: smooth;
+    scroll-padding-top: 6rem;
+    overflow-x: hidden;
 }
-.nav{
-    background: rgb(248, 226, 229);
-    height: 100%;
-    width: 100%;
+
+header{
+    position: fixed;
+    top: 0; left: 0; right: 0;
+    background: #fff;
+    padding: 2rem 9%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    z-index: 1000;
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
 }
-.nav ul{
-    float: right;
-    margin-right: 250px;
+
+header .logo{
+    width: 15%;
+    height: 15%;
 }
-.nav ul li{
-    display: inline-block;
-    line-height: 92px;
-    margin: 0 10px;
-    padding: 15px;
+
+header .navbar a{
+    font-size: 2rem;
+    padding: 0 1.5rem;
+    color: #666;
 }
-.nav ul li a{
-    color: rgb(218, 129, 218);
-    font-size: 17px;
-    text-transform: uppercase;
+
+header .navbar a:hover{
+    color: var(--pink);
 }
-section {
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
-  }
-  
-  h2 {
-    font-size: 36px;
-    color: black;
-  }
-  
+
+header .icons a{
+    font-size: 2.5rem;
+    color: #333;
+    margin-left: 1.5rem;
+}
+
+header .icons a:hover{
+    color: var(--pink);
+}
+
+header #toggler{
+    display: none;
+}
+
+header .fa-bars{
+    font-size: 3rem;
+    color: #333;
+    border-radius: .5rem;
+    padding: .5rem 1.5rem;
+    cursor: pointer;
+    border: .1rem solid rgba(0,0,0,.3);
+    display: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* media queries */
+@media (max-width:991px) {
+    html{
+        font-size: 55%;
+    }
+
+    header{
+        padding: 2rem;
+    }
+}
+
+
+
+@media (max-width:991px) {
+    header .fa-bars{
+        display: block;
+    }
+
+    header .navbar{
+        position: absolute;
+        top: 100%; left: 0; right: 0;
+        background: #eee;
+        border-top: .1rem solid rgba(0,0,0,.1);
+        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+    }
+
+    header #toggler:checked ~.navbar{
+        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+    }
+
+    header .navbar a{
+        margin: 1.5rem;
+        padding: 1.5rem;
+        background: #fff;
+        border: .1rem solid rgba(0,0,0,.1);
+        display: block;
+    }
+}
+
+@media (max-width:450px) {
+    html{
+        font-size: 50%;
+    }
+
+    header{
+        padding: 2rem;
+    }
+}
