--- a/style.css
+++ b/style.css
@@ -26,10 +26,10 @@ section{
 .btn{
     display: inline-block;
     margin-top: 1rem;
-    border-radius: 5rem;
+    border-radius: 1rem;
     background: #333;
     color: #fff;
-    padding: 9rem 3.5rem;
+    padding: 2rem 2rem;
     cursor: pointer;
     font-size: 1.7rem;
 }
@@ -95,6 +95,7 @@ header .fa-bars{
     background: url(./Images/Backg.jpeg) no-repeat;
     background-size: cover;
     background-position: center;
+    width: auto;
 }
 
 .home .content{
@@ -120,7 +121,102 @@ header .fa-bars{
     line-height: 1.5;
 }
 
-
+.contact-us {
+    padding: 2rem;
+  }
+  
+  .contact-us h2 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+  }
+  
+  .contact-us p {
+    font-size: 1rem;
+    margin-bottom: 1rem;
+  }
+  
+  .contact-us form {
+    width: 50%;
+    margin: 0 auto;
+  }
+  
+  .contact-us input,
+  .contact-us textarea {
+    width: 100%;
+    padding: 1rem;
+    border: 1px solid #ccc;
+    margin-bottom: 1rem;
+  }
+  
+  .contact-us button {
+    background-color: #ff009d;
+    color: white;
+    padding: 1rem 2rem;
+    font-size: 1rem;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  .contact-us button:hover {
+    background-color: #e84393;
+  }
+  
+  .contact-us h3 {
+    font-size: 1.5rem;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+  }
+  
+  .contact-us ul {
+    list-style: none;
+    padding: 0;
+  }
+  
+  .contact-us li {
+    display: inline-block;
+    margin-right: 1rem;
+  }
+  
+  .contact-us li a {
+    color: #ff009d;
+    text-decoration: none;
+  }
+  
+  .contact-us li a:hover {
+    color: #e84393;
+  }
+  .gallery {
+    padding: 2rem;
+  }
+  
+  .gallery h2 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+  }
+  
+  .gallery .gallery-grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  
+  .gallery figure {
+    width: 30%;
+    padding: 1rem;
+  }
+  
+  .gallery figure img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+  }
+  
+  .gallery figure figcaption {
+    text-align: center;
+    font-size: 1rem;
+    margin-top: 1rem;
+  }
+    
 
 
 
